--- a/powerjob-server/powerjob-server-starter/src/main/resources/application-product.properties
+++ b/powerjob-server/powerjob-server-starter/src/main/resources/application-product.properties
@@ -3,20 +3,26 @@ logging.config=classpath:logback-product.xml
 
 ####### Database properties(Configure according to the the environment) #######
 spring.datasource.core.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.core.jdbc-url=jdbc:mysql://localhost:3306/powerjob-product?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-spring.datasource.core.username=root
-spring.datasource.core.password=No1Bug2Please3!
+spring.datasource.core.jdbc-url=jdbc:mysql://t5r0w9fy8wq00.cn-beijing.oceanbase.aliyuncs.com:3306/datacenter?autoReconnect=true&failOverReadOnly=false&maxReconnects=1000&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.core.username=qujieob431
+spring.datasource.core.password=qujieob431@10455
 spring.datasource.core.maximum-pool-size=20
 spring.datasource.core.minimum-idle=5
 
 ####### Storage properties(Delete if not needed)  #######
 #oms.storage.dfs.mongodb.uri=mongodb://localhost:27017/powerjob-product
+oms.storage.dfs.mysql_series.driver=com.mysql.cj.jdbc.Driver
+oms.storage.dfs.mysql_series.url=jdbc:mysql://t5r0w9fy8wq00.cn-beijing.oceanbase.aliyuncs.com:3306/datacenter?autoReconnect=true&failOverReadOnly=false&maxReconnects=1000&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
+oms.storage.dfs.mysql_series.username=qujieob431
+oms.storage.dfs.mysql_series.password=qujieob431@10455
+oms.storage.dfs.mysql_series.auto_create_table=true
 
 ####### Email properties(Non-core configuration properties) #######
 ####### Delete the following code to disable the mail #######
-spring.mail.host=smtp.qq.com
-spring.mail.username=zqq
-spring.mail.password=qqz
+spring.mail.host=172.18.22.127
+spring.mail.port=10025
+spring.mail.username=pdd_service@yusys.com.cn
+spring.mail.password=2019_pdd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -28,7 +34,7 @@ oms.alarm.ding.app-secret=
 oms.alarm.ding.agent-id=
 
 ####### Resource cleaning properties #######
-oms.instanceinfo.retention=7
+oms.instanceinfo.retention=30
 oms.container.retention.local=7
 oms.container.retention.remote=-1
 
