--- a/powerjob-server/powerjob-server-starter/src/main/resources/application-product.properties
+++ b/powerjob-server/powerjob-server-starter/src/main/resources/application-product.properties
@@ -2,19 +2,19 @@ oms.env=PRODUCT
 logging.config=classpath:logback-product.xml
 
 ####### Database properties(Configure according to the the environment) #######
-spring.datasource.core.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.core.jdbc-url=jdbc:mysql://t5r0w9fy8wq00.cn-beijing.oceanbase.aliyuncs.com:3306/datacenter?autoReconnect=true&failOverReadOnly=false&maxReconnects=1000&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.core.username=qujieob431
-spring.datasource.core.password=qujieob431@10455
+spring.datasource.core.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.core.jdbc-url=jdbc:mysql://remotehost:3306/datacenter?autoReconnect=true&failOverReadOnly=false&maxReconnects=1000&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.core.username=111111
+spring.datasource.core.password=222222
 spring.datasource.core.maximum-pool-size=20
 spring.datasource.core.minimum-idle=5
 
 ####### Storage properties(Delete if not needed)  #######
 #oms.storage.dfs.mongodb.uri=mongodb://localhost:27017/powerjob-product
-oms.storage.dfs.mysql_series.driver=com.mysql.cj.jdbc.Driver
-oms.storage.dfs.mysql_series.url=jdbc:mysql://t5r0w9fy8wq00.cn-beijing.oceanbase.aliyuncs.com:3306/datacenter?autoReconnect=true&failOverReadOnly=false&maxReconnects=1000&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
-oms.storage.dfs.mysql_series.username=qujieob431
-oms.storage.dfs.mysql_series.password=qujieob431@10455
+oms.storage.dfs.mysql_series.driver=com.mysql.jdbc.Driver
+oms.storage.dfs.mysql_series.url=jdbc:mysql://remotehost:3306/datacenter?autoReconnect=true&failOverReadOnly=false&maxReconnects=1000&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
+oms.storage.dfs.mysql_series.username=111111
+oms.storage.dfs.mysql_series.password=222222
 oms.storage.dfs.mysql_series.auto_create_table=true
 
 ####### Email properties(Non-core configuration properties) #######
